@@ -9898,6 +9898,13 @@ file.</p></div>
 <div class="content">
 <pre><tt>report_nice_level = 5</tt></pre>
 </div></div>
+<h4 id="_report_base_url">report_base_url</h4>
+<div class="paragraph"><p>Url used to replace relative links in html reports.</p></div>
+<div class="paragraph"><p>ex.:</p></div>
+<div class="literalblock">
+<div class="content">
+<pre><tt>report_base_url = http://host.local/thruk/cgi-bin/</tt></pre>
+</div></div>
 <h4 id="_logcache">logcache</h4>
 <div class="paragraph"><p>Enables caching logfiles for faster access. Cache supports MongoDB
 only. Format is a MongoDB connection string like <em>hostname:port/db</em>.
@@ -10707,7 +10714,7 @@ of your monitoring core configuration.</p></div>
 <div id="footnotes"><hr /></div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2012-10-22 16:54:07 CEST
+Last updated 2012-10-30 22:41:26 CEST
 </div>
 </div>
 </body>
