@@ -369,6 +369,9 @@ cron_post_edit_cmd = /usr/bin/crontab /tmp/thruk_cron.tmp && rm -f /tmp/thruk_cr
 # execute regular scheduled reports with this nice level
 #report_nice_level = 5
 
+# url used to replace relative links in html reports
+#report_base_url=http://host.local/thruk/cgi-bin/
+
 #####################################
 # Waiting is a livestatus feature. When enabled, Thruk will wait
 # after rescheduling hosts/services checks until the
